--- a/src/app/components/add-credito/add-credito.component.html
+++ b/src/app/components/add-credito/add-credito.component.html
@@ -5,7 +5,7 @@
   <div class="row card" style="border: 1px solid black;">
     <div class="row g-3">
       <div class="col-md-3">
-          <input type="text" class="form-control" name="nombre" #nombre="ngModel" [(ngModel)]="cliente.nombre" placeholder="Nombre" [disabled]="!isNuevo">
+          <input type="text" class="form-control" name="nombre" #nombre="ngModel" [(ngModel)]="cliente.nombre" placeholder="Nombre" [disabled]="!isNuevo" (keyup)="buscaClientePorNombre()">
       </div>
       <div class="col-md-3">
           <input type="text" class="form-control" name="telefono" #telefono="ngModel" [(ngModel)]="cliente.telefono" placeholder="Teléfono" [disabled]="!isNuevo">
@@ -15,6 +15,26 @@
       </div>
       <div class="col-md-3 mb-3">
           <input type="text" class="form-control" name="direccion" #direccion="ngModel" [(ngModel)]="cliente.direccion" placeholder="Dirección" [disabled]="!isNuevo">
+      </div>
+    </div>
+    <div *ngIf="clientes.length>0" class="row" style="margin-top: -10px;">
+      <div class="col-md-12">
+        <table class="table table-hover table-bordered">
+          <colgroup>
+          <col width="25%">
+          <col width="25%">
+          <col width="25%">
+          <col width="25%">
+          </colgroup>
+          <tbody>
+            <tr *ngFor="let cliente of clientes; let i=index" (click)="selectCliente(i)">
+              <td class="alignLeftRow">{{cliente.nombre}}</td>
+              <td class="alignCenterRow">{{cliente.telefono}}</td>
+              <td>{{cliente.correoElectronico}}</td>
+              <td>{{cliente.direccion}}</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div>
   </div>
@@ -105,8 +125,8 @@
               <tbody>
                 <tr *ngFor="let pago of pagos; let i = index">
                   <td>{{i+1}}/{{credito.noPagosTotales}}</td>
-                  <td>{{pago.fechaPago | date:'dd-MMM-YYYY'}}</td>
                   <td>{{pago.montoPago | currency:'MXN'}}</td>
+                  <td>{{pago.fechaPago | date:'dd-MMM-YYYY'}}</td>
                 </tr>
               </tbody>
             </table>
