--- a/src/app/components/lista-credito/lista-credito.component.html
+++ b/src/app/components/lista-credito/lista-credito.component.html
@@ -43,7 +43,7 @@
     </thead>
   </table>
   <div style="margin-top: -16px;height: 500px;overflow: auto;border: 1px solid green;">
-    <table class="table table-bordered" id="tblCreditos">
+    <table class="table table-bordered table-hover" id="tblCreditos">
       <colgroup>
         <col width="20%">
         <col width="10%">
